--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "chewy-stack",
   "version": "0.0.0",
   "private": true,
+  "homepage": "https://swarnjit.github.io/chewy-stack-docs",
   "scripts": {
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
@@ -11,7 +12,9 @@
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
-    "write-heading-ids": "docusaurus write-heading-ids"
+    "write-heading-ids": "docusaurus write-heading-ids",
+    "predeploy": "yarn run build",
+    "deploy-gh": "gh-pages -d build"
   },
   "dependencies": {
     "@docusaurus/core": "2.0.0-alpha.72",
